// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallToAction matches the snapshot 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c3 {
  padding-left: 4px;
  margin-top: 8px;
  margin-bottom: 4px;
}

.c0 {
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 8px;
  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.27);
  border-radius: 3px;
}

.c5 {
  border-radius: 3px;
  border: 1px solid #6b6b6b;
  margin-left: 8px;
  padding: 4px;
  box-shadow: none;
  border-radius: 3px;
  border: 1px solid #6b6b6b;
}

.c4 {
  cursor: pointer;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  font-size: 24px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
  padding-bottom: 16px;
  border-radius: 24px;
  border-width: 2px;
  border-color: #ffffff;
  color: #ffffff;
  background-color: #d24949;
  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.27);
  margin-top: 4px;
  font-family: inherit;
  font-weight: 700;
  line-height: 1.5;
  text-align: center;
}

.c4 > * {
  vertical-align: middle;
}

.c4:disabled {
  opacity: 0.3;
}

.c4:hover {
  box-shadow: 0 2px 8px 0 rgba(0,0,0,0.27);
  background-color: #ba2e2e;
}

.c4:active {
  box-shadow: rgba(0,0,0,0.12) 0px 0px 1px inset;
}

.c2 {
  padding-left: 4px;
  margin-bottom: 8px;
  margin: 0;
}

<div
  className="c0"
  display="inline-flex"
>
  <div
    className="c1"
    display="inline-flex"
  >
    <h2
      className="c2"
    >
      Call To Action!
    </h2>
    <div
      className="c3"
    />
    <button
      className="c4"
      color="#ffffff"
      fontFamily="inherit"
      fontWeight="bold"
    >
      Do the thing
    </button>
  </div>
  <div
    className="c5"
  >
    foo
  </div>
</div>
`;

exports[`CallToAction renders with out an image 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c3 {
  padding-left: 4px;
  margin-top: 8px;
  margin-bottom: 4px;
}

.c0 {
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 8px;
  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.27);
  border-radius: 3px;
}

.c4 {
  cursor: pointer;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  font-size: 24px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
  padding-bottom: 16px;
  border-radius: 24px;
  border-width: 2px;
  border-color: #ffffff;
  color: #ffffff;
  background-color: #d24949;
  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.27);
  margin-top: 4px;
  font-family: inherit;
  font-weight: 700;
  line-height: 1.5;
  text-align: center;
}

.c4 > * {
  vertical-align: middle;
}

.c4:disabled {
  opacity: 0.3;
}

.c4:hover {
  box-shadow: 0 2px 8px 0 rgba(0,0,0,0.27);
  background-color: #ba2e2e;
}

.c4:active {
  box-shadow: rgba(0,0,0,0.12) 0px 0px 1px inset;
}

.c2 {
  padding-left: 4px;
  margin-bottom: 8px;
  margin: 0;
}

<div
  className="c0"
  display="inline-flex"
>
  <div
    className="c1"
    display="inline-flex"
  >
    <h2
      className="c2"
    >
      Call To Action!
    </h2>
    <div
      className="c3"
    />
    <button
      className="c4"
      color="#ffffff"
      fontFamily="inherit"
      fontWeight="bold"
    >
      Do the thing
    </button>
  </div>
</div>
`;
